fixed nav bugs on mobile

--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -122,18 +122,19 @@ nav, footer {
 nav {
 	top: 0;
 	height: $site-padding-top;
-	padding-top: $site-size;
 	@media only screen and (max-width: $mobile-breakpoint) {
 		background: $main-color;
 		box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.2);
+		padding-top: $site-size * 0.9;
 	}
-	@media only screen and (min-width: $mobile-breakpoint) {
+	@media only screen and (min-width: $mobile-breakpoint + 1px) {
 		background: transparent;
+		padding-top: $site-size;
 	}
 	a {
 		color: $accent-color;
 		@media only screen and (max-width: $mobile-breakpoint) {
-			margin-right: $line-height-mobile;
+			margin-right: $line-height-mobile * 0.25;
 		}
 		@media only screen and (min-width: $mobile-breakpoint + 1px) {
 			margin-right: $line-height;
